project(World001)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
include_directories(${SDL2_IMAGE_INCLUDE_DIR})
include_directories(${SDL2_TTF_INCLUDE_DIR})
add_library(C OBJECT src/classes/CGame.cpp src/classes/CEsWorldScreen.cpp)
add_executable(World001 src/main.cpp $<TARGET_OBJECTS:C>)
target_link_libraries(World001 ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2_TTF_LIBRARY} ${classes_src})
install(TARGETS World001 RUNTIME DESTINATION ${BIN_DIR})
