project(src)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
include_directories(${SDL2_IMAGE_INCLUDE_DIR})
include_directories(${SDL2_TTF_INCLUDE_DIR})
include_directories(${SDL2_MIXER_INCLUDE_DIR})
add_library(C OBJECT classes/CGame.cpp classes/CEsWorldScreen.cpp classes/CDialog.cpp classes/CPlayer.cpp classes/CTexture.cpp classes/CButton.cpp)
add_executable(esworld main.cpp $<TARGET_OBJECTS:C>)
target_link_libraries(esworld ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2_TTF_LIBRARY} ${SDL2_MIXER_LIBRARY} ${C})
install(TARGETS esworld RUNTIME DESTINATION ${BIN_DIR})
